Version 0.13.0 (WIP)

- Dropped Python 2 support and removed a bit of Python 2 compatibility clutter
- Removed synchronous APIs
- Removed thread-based promise implementation in favor of asyncio futures and coroutines

This version introduces changes to the existing public APIs:

- The storage interface has been modified to use asyncio coroutines instead of callbacks.
- All methods of the session manager that returned promises previously have been replaced with equivalent asyncio coroutines. Support for the synchronous API has been removed.

Version 0.12.0 (released: 28th of March, 2020)

- The JSONFileStorage now encodes JIDs using hashes, to avoid various issues regarding the file system. <- WARNING, THERE ARE KNOWN ISSUES WITH THIS STORAGE IMPLEMENTATION.
- Sending 12 byte IV's instead of 16 now
- Fixed the way key transport messages are sent and received to be compatible with other implementations.
- Switched to MIT license with the agreement of all contributors!

This version introduces changes to the existing public APIs:

- SessionManager.encryptKeyTransportMessage now receives the optional plaintext as a parameter directly, instead of using a callback to encrypt external data. If the plaintext is omitted, a shared secret is returned that can be used for purposes external to this library.

Other internal breaking changes are listed above.

Version 0.11.0 (released: 13th of December, 2019)

- Fixed a bug in the SessionManager, where the contents of a parameter (passed by reference) were modified.
- Merged the "trust" and "distrust" methods into "setTrust".
- Added a new method "resetTrust", which allows going back to the trust level "undecided".
- Removed the SessionManagerAsyncIO, in preparation for the big Python 3 update coming soon.

This version introduces changes to the existing public APIs:

- SessionManager.trust and SessionManager.distrust were merged into SessionManager.setTrust